# adventOfCode2022

./: .gitignore  input_downloader.py  pyproject.toml  setup_script.py  template.py  time_solutions.sh
1/: input.txt  one.py
10/: input.txt  ten.py  test_script.py  test_ten.py
11/: eleven.py  input.txt  test_eleven.py  test_input.txt
12/: test_twelve.py  twelve.py
13/: input.txt  test_thirteen.py  thirteen.py
14/: fourteen.py  input.txt  test_fourteen.py
2/: two.py
3/: input.txt  three.py
4/: four.py  input.txt  test_four.py
5/: five.py  input.txt  test_five.py
6/: six.py  test_six.py
7/: input.txt  seven.py  seven_v2.py  test_seven.py
8/: eight.py  eight_v2.py  input.txt  test_eight.py
9/: input.txt  nine.py  test_nine.py
utilities/: __init__.py  setup_script.py  template.py  test_script.py  testing_template.py  timer.py
