[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["fahaddd-git <awan.fahad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = "^0.7.0"
rich = "^12.6.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[tool.black]
line-length = 88
target-version = ['py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
